--- a/10/Dockerfile
+++ b/10/Dockerfile
@@ -25,25 +25,26 @@ ENV PYTHON_VERSION 2.7.15
 
 RUN set -ex \
 	&& buildDeps=" \
-		dpkg-dev \
-		gcc \
-		libbz2-dev \
-		libc6-dev \
-		libdb-dev \
-		libgdbm-dev \
-		libncursesw5-dev \
-		libreadline-dev \
-		libsqlite3-dev \
-		libssl-dev \
-		tcl-dev \
-		tk-dev \
-		wget \
-		xz-utils \
-		zlib1g-dev \
-# as of Stretch, "gpg" is no longer included by default
-		$(command -v gpg > /dev/null || echo 'gnupg dirmngr') \
+					dpkg-dev \
+					gcc \
+					libbz2-dev \
+					libc6-dev \
+					libdb-dev \
+					libgdbm-dev \
+					libncursesw5-dev \
+					libreadline-dev \
+					libsqlite3-dev \
+					libssl-dev \
+					make \
+					tcl-dev \
+					tk-dev \
+					wget \
+					xz-utils \
+					zlib1g-dev \
+					# as of Stretch, "gpg" is no longer included by default
+					$(command -v gpg > /dev/null || echo 'gnupg dirmngr') \
 	" \
-	&& apt-get update && apt-get install -y $buildDeps make g++ --no-install-recommends && rm -rf /var/lib/apt/lists/* \
+	&& apt-get update && apt-get install -y $buildDeps --no-install-recommends && rm -rf /var/lib/apt/lists/* \
 	\
 	&& wget -O python.tar.xz "https://www.python.org/ftp/python/${PYTHON_VERSION%%[a-z]*}/Python-$PYTHON_VERSION.tar.xz" \
 	&& wget -O python.tar.xz.asc "https://www.python.org/ftp/python/${PYTHON_VERSION%%[a-z]*}/Python-$PYTHON_VERSION.tar.xz.asc" \
@@ -75,32 +76,11 @@ RUN set -ex \
 		\) -exec rm -rf '{}' + \
 	&& rm -rf /usr/src/python
 
-# if this is called "PIP_VERSION", pip explodes with "ValueError: invalid truth value '<VERSION>'"
-ENV PYTHON_PIP_VERSION 10.0.1
-
+# installing what node-gyp needs to compile modules (make,g++)
 RUN set -ex; \
-	\
-	apt-get update; \
-	apt-get install -y --no-install-recommends wget; \
-	rm -rf /var/lib/apt/lists/*; \
-	\
-	wget -O get-pip.py 'https://bootstrap.pypa.io/get-pip.py'; \
-	\
-	apt-get purge -y --auto-remove wget; \
-	\
-	python get-pip.py \
-		--disable-pip-version-check \
-		--no-cache-dir \
-		"pip==$PYTHON_PIP_VERSION" \
-	; \
-	pip --version; \
-	\
-	find /usr/local -depth \
-		\( \
-			\( -type d -a \( -name test -o -name tests \) \) \
-			-o \
-			\( -type f -a \( -name '*.pyc' -o -name '*.pyo' \) \) \
-		\) -exec rm -rf '{}' +; \
-	rm -f get-pip.py
+			\
+			apt-get update; \
+			apt-get install -y --no-install-recommends build-essential; \
+			rm -rf /var/lib/apt/lists/*;
 
 CMD [ "node" ]
